--- a/src/views/App/App.scss
+++ b/src/views/App/App.scss
@@ -31,7 +31,14 @@
 }
 
 
-/* DELETE BUTTON STYLE DESIGN */
+/* EDIT BUTTON STYLE DESIGN */
+// .edit-icon {
+//     margin: 0px 0px 0px 10px;
+// }
+
+.edit-icon:hover {
+    cursor: pointer;
+}
 
 
 /* ASIDE STYLE DESIGN */
