--- a/src/views/App/App.scss
+++ b/src/views/App/App.scss
@@ -393,5 +393,8 @@
 /* SEARCH BAR STYLE */
 .search-container {
     display: flex;
+    flex-direction: column;
     padding: 0px 0px 15px 0px;
+    width: 25vw;
+    justify-content: space-between;
 }
